@@ -4,6 +4,7 @@ Knot Resolver 5.x.y (2021-0m-dd)
 Improvements
 ------------
 - support apkg tool for packaging workflow (!1178)
+- fine grained logging (!1181)
 
 Bugfixes
 --------
@@ -16,6 +17,7 @@ Incompatible changes
 --------------------
 - legacy DoH implementation configuration in net.listen() was renamed from
   kind="doh" to kind="doh_legacy" (!1180)
+- verbose() is deprecated (!1181)
 
 
 Knot Resolver 5.3.2 (2021-05-05)
